inadyn: updates from git (SSL SNI support)

--- a/trunk/user/inadyn/README
+++ b/trunk/user/inadyn/README
@@ -47,8 +47,9 @@ DDNS plugin.  See below for configuration examples.
 Some of these services are free of charge for non-commercial use, others
 take a small fee, but also provide more domains to choose from.
 
-Inadyn v1.99.8 and later support HTTPS, for DDNS providers that support
-this (you must check this yourself).  Tested are DynDNS and FreeDNS.
+Inadyn v1.99.8 and later support HTTPS (v1.99.11 and later also support SNI),
+for DDNS providers that support this (you must check this yourself).
+Tested are DynDNS, FreeDNS and nsupdate.info.
 Using HTTPS is recommended since it protects your credentials from being
 snooped and further reduces the risk of someone hijacking your account.
 
