--- a/trunk/user/dnsmasq/dnsmasq-2.7x/CHANGELOG
+++ b/trunk/user/dnsmasq/dnsmasq-2.7x/CHANGELOG
@@ -13,6 +13,11 @@ version 2.75+
 	    was a dangling symbolic link, even of --no-resolv set.
 	    Thanks to Alexander Kurtz for spotting the problem.
 
+	    Fix crash when an A or AAAA record is defined locally,
+	    in a hosts file, and an upstream server sends a reply
+	    that the same name is empty. Thanks to Edwin Török for
+	    the patch.
+
 	
 version 2.75
             Fix reversion on 2.74 which caused 100% CPU use when a 
