--- a/trunk/user/miniupnpd/miniupnpd-1.9.x/Changelog.txt
+++ b/trunk/user/miniupnpd/miniupnpd-1.9.x/Changelog.txt
@@ -1,4 +1,17 @@
-$Id: Changelog.txt,v 1.408 2015/11/16 19:29:42 nanard Exp $
+$Id: Changelog.txt,v 1.415 2015/12/16 10:21:48 nanard Exp $
+
+2015/12/16:
+  improve syslog message for incoming HTTP requests
+
+2015/12/13:
+  --disable-pppconn to disable WanPPPConnection
+  more fixes in DeviceProtection service
+
+2015/12/12:
+  add commandline option to genconfig.sh to set UPnP (UDA) version
+  advertise correct service and device versions when IGDv2 is enabled
+  fix action arguments for DeviceProtection service
+  fix event subscription renewal (include SID in response)
 
 2015/11/16:
   Fix bsd/getroute.c get_src_for_route_to() when args are NULL
